--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ src/agents/__pycache__/utils.cpython-312.pyc
 **/.mypy_cache/**
 **/.cache/**
 **/.DS_Store
+
+# Large database files
+data/chroma_db/*.bin
+data/chroma_db/*.sqlite3
